--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">BasicDemo</string>
+
+    <string name="loading_comments">Loading comments...</string>
+    <string name="loading_products">Loading products...</string>
+    <string name="title">title</string>
+    <string name="price_prompt">prize: $</string>
+    <string name="content">I am content</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
